src/objects/Eval_Return_Request__c.object
<CustomObject>
    <description>Form with fields and responses for the RMA button on the Eval records</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_asset_will_be_ready_for_pick_up__c</fullName>
        <label>Date asset will be ready for pick up:</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_have_the_original_packaging__c</fullName>
        <label>Do you have the original packaging?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I have original packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I do not have original packaging and need a repack box shipped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eval__c</fullName>
        <label>Eval</label>
        <referenceTo>Eval__c</referenceTo>
        <relationshipName>Request_RMAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Name__c</fullName>
        <label>Point of Contact Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone__c</fullName>
        <label>Point of Contact Phone</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_hours_to_pick_up_array__c</fullName>
        <inlineHelpText>Enter the receiving hours of the pickup location. Ex: 9am - 5pm</inlineHelpText>
        <label>Receiving hours to pick up array</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Notes__c</fullName>
        <inlineHelpText>Please enter any notes - is this a data center? Are there multiple locations?</inlineHelpText>
        <label>Return Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Eval Return Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{000000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eval Return Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>